vlib/v/checker/tests/unknown_type_in_anon_fn.vv
module main

struct Struc{
mut:
	f fn (s Another, i int)?
}

fn main() {}
